# mystuff

./: README.md
C Projekt/: .clang-format  .gitlab-ci.yml
C Projekt/01R_basics/: Makefile  hello.c  shellutils.c  shellutils.h  test.c
C Projekt/02R_zeiger/: CMakeLists.txt  betriebssysteme-code-style.xml
C Projekt/02R_zeiger/include/: lili.h
C Projekt/02R_zeiger/src/: lili.c  main.c
C Projekt/02R_zeiger/test/: Makefile  lili_test.c
C Projekt/03R_prozesse/: CMakeLists.txt
C Projekt/03R_prozesse/myshell/: CMakeLists.txt
C Projekt/03R_prozesse/myshell/include/: plist.h  shellfunctions.h  shellutils.h
C Projekt/03R_prozesse/myshell/src/: main.c  plist.c  shellfunctions.c  shellutils.c
C Projekt/03R_prozesse/test/: CMakeLists.txt  myshell_test.c
C Projekt/05R_Speicherverwaltung/: CMakeLists.txt
C Projekt/05R_Speicherverwaltung/include/: colorCodes.h  dotmalloc.h  mymalloc.h
C Projekt/05R_Speicherverwaltung/ressources/: create_files.bash  run_compare.bash  show_dot.sh
C Projekt/05R_Speicherverwaltung/src/: dotmalloc.c  main.c  mymalloc.c
C Projekt/07R_User_Scheduling/: CMakeLists.txt
C Projekt/07R_User_Scheduling/include/: demo.h  main.h  sem.h
C Projekt/07R_User_Scheduling/lib/puthreads/: CMakeLists.txt  LICENSE  queue.c  queue.h  tcb.c  tcb.h  threads.c  threads.h
C Projekt/07R_User_Scheduling/src/: demo.c  main.c  sem.c
C Projekt/09R_IPC_threads_client/: CMakeLists.txt
C Projekt/09R_IPC_threads_client/include/: client.h  utils.h
C Projekt/09R_IPC_threads_client/ressources/: color_codes.sh  input-testC  myGroup-server  run_tests.bash
C Projekt/09R_IPC_threads_client/src/: client.c  main.c  utils.c
C Projekt/11R_IPC_threads_server/: CMakeLists.txt
C Projekt/11R_IPC_threads_server/include/: reads_list.h  ring_buffer.h  server.h
C Projekt/11R_IPC_threads_server/ressources/: myGroup-benchmark  myGroup-test-client  testMessages1.txt  testMessages2.txt  testMessages3.txt  testMessages4.txt  testMessages5.txt
C Projekt/11R_IPC_threads_server/src/: main.c  reads_list.c  ring_buffer.c  server.c
C Projekt/TestBib/: checkstyle.sh  extractEnv.sh  extractYaml.sh  testbib.h
